# Data-Octopus

./: .gitignore  CSV_Format_Vergleich.txt  DEPLOYMENT.md  Dockerfile  README.md  TODO_MORGEN_05_03_2026.md  Visual Studio Code.lnk  add_helper_function.py  analyze_dtr.py  debug_err.txt  debug_out.txt  docker-compose.yml  dtr_output.txt  fix_cleanup.py  fix_diffmap_debug.py  fix_grr.py  main.16.12.py  main.py  main_22.01.26.py  main_git_f52ba34.py  main_v2.py  main_v3.py  mc300_temp.txt  requirements.txt
Binning/: Copy of HN2_Binning&TestNumber_V0.36.xlsx
Code/: DataOctopus.spec  add_slide_tabs.py  analyze_dc_test_groups.py  analyze_groups.py  analyze_ppt_slides.py  analyze_pptx.py  create_icon.py  debug_multiwafer.py  fix_boxplot_distribution.py  fix_diffmap.py  fix_diffmap_issue.py  fix_diffmap_param.py  fix_diffmap_param_v2.py  fix_dist_normal.py  fix_multiwafer_param.py  fix_param_matching.py  fix_wafermap.py  main.py  main_dev.py  main_v3.py  main_v5.1.py  main_v5.2.py  main_v5.py  main_v6.0.py  main_v6.1.py  main_v6.2.py  main_v6.3.py  main_v6.4.py  main_v7.0.py  pyproject.toml  setup_google_drive.py
Code/04.03/: main.py  main_dev.py  main_v5.1_git.py  main_v5.py
Code/saved_jobs/: Job_20260226_1321.json  Job_20260226_1402.json
Code/src/stdf_analyzer/: __init__.py
Code/src/stdf_analyzer/core/: binning.py  data_loader.py  parameter_utils.py  plm_analyzer.py  statistics_utils.py  wafermap_utils.py
Code/src/stdf_analyzer/gui/: __init__.py  charac_curve_tab.py  dashboard_tab.py  datalog_tab.py  diffmap_tab.py  filemanipulator_tab.py  master_inventory_tab.py  report_tab.py  statistics_tab.py  wafer_tab.py
Code/src/stdf_analyzer/services/: ppt_export.py
Code/src/stdf_analyzer/web/: app.py
Code/src/stdf_analyzer/web/nicegui_app/: csv_loader.py  main.py
Code/src/stdf_analyzer/web/nicegui_app/components/: sidebar.py  toolbar.py  wafermap_renderer.py
Code/src/stdf_analyzer/web/nicegui_app/tabs/: __init__.py  diffmap_tab.py  multi_wafer_tab.py  report_tab.py  wafer_tab.py
Code/tests/: test_binning.py  test_data_loader.py  test_parameter_utils.py  test_statistics_utils.py  test_wafermap_utils.py
Jobs/: 5FEIC03 Green Job Gage R&R V223 Programm.json  Job_20260220_1620.json  (+1 more)
(+67 files in other folders)
